plugins {
	id 'fabric-loom' version '0.11-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven {
		url 'https://repo.maven.apache.org/maven2'
		name 'Maven Central'
	}
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	include "com.konghq:unirest-java:3.13.4:standalone"
	include(modImplementation ("net.dv8tion:JDA:5.0.0-alpha.1") {
		exclude module: 'opus-java'
	})
	include(modImplementation ("com.konghq:unirest-java:3.13.4:standalone")){
		exclude group: "com.google.code.gson", module: "gson"
		exclude group: "org.apache.httpcomponents", module: "httpclient"
		exclude group: "commons-logging", module: "commons-logging"
	}
	include "com.squareup.okhttp3:okhttp:3.13.0"
	include "com.squareup.okio:okio:1.17.2"
	include "org.jetbrains:annotations:16.0.1"
	include "org.apache.commons:commons-collections4:4.1"
	include "com.neovisionaries:nv-websocket-client:2.14"
	include "com.google.code.findbugs:jsr305:3.0.2"
	include "net.sf.trove4j:trove4j:3.0.3"
	include "com.fasterxml.jackson.core:jackson-annotations:2.10.1"
	include "com.fasterxml.jackson.core:jackson-core:2.10.1"
	include "com.fasterxml.jackson.core:jackson-databind:2.10.1"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
	it.options.release = 17
	it.options.encoding = 'UTF-8'
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
